Fixes spacing on header mobile - chrome

--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,7 @@ body {
 header {
     padding: .25em;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     font-size: var(--header-font-size);
     color: #213546;
@@ -51,6 +51,7 @@ header {
 .logo {
     width: fit-content;
     height: fit-content;
+    max-width: 60%;
     flex-grow: 1;
     flex-shrink: 0;
     margin: 0;
@@ -150,7 +151,7 @@ header ul li a:hover {
     header {
         flex-wrap: nowrap;
         margin: 0;
-        padding: 0;
+        padding: 0 1em;
         max-height: 15vh;
     }
 
@@ -295,7 +296,7 @@ header ul li a:hover {
     justify-content: center;
     align-items: center;
     min-height: 80vh;
-    padding: 1.5em 1em;
+    padding: 0 1em;
     background-color: #161B32;
 }
 
